<resources>
    <string name="app_name">Library</string>
    <string name="login_account">Student ID</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forget">Forget password?</string>
    <string name="login_noAccount">Don\'t hava an account?</string>
    <string name="login_register">Sign up</string>
    <string name="register_account">Student ID</string>
    <string name="register_telephone">Telephone</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_passwordConfirm">Confirm Password</string>
    <string name="register_signup">Sign up</string>
    <string name="forget_telephone">Telephone</string>
    <string name="forget_account">Account</string>
    <string name="forget_password">Password</string>
    <string name="forget_passwordConfirm">Confirm Password</string>
    <string name="menu_logout">Log out</string>
    <string name="register_sex">Sex</string>
    <string name="register_college">College</string>
    <string name="register_major">Major</string>
    <string name="register_cancel">Cancel</string>
    <string name="forget_reset">Reset</string>
    <string name="forget_cancel">Cancel</string>
    <string name="forget_title">Reset Password</string>
    <string name="home_search">Please input book name</string>


</resources>
