<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ForgetActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_forget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginBottom="200dp"
        android:text="@string/forget_title" />

    <EditText
        android:id="@+id/edtTxt_forget_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/forget_account"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="20sp">
    </EditText>

    <EditText
        android:id="@+id/edtTxt_forget_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:hint="@string/forget_telephone"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="20sp">
    </EditText>

    <EditText
        android:id="@+id/edtTxt_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:hint="@string/forget_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp">
    </EditText>

    <EditText
        android:id="@+id/edtTxt_forget_passwordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:hint="@string/forget_passwordConfirm"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_forget_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="resetPwd"
        android:text="@string/forget_reset" />

    <Button
        android:id="@+id/btn_forget_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/forget_cancel" />


</LinearLayout>