<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="32dp">


    <ImageView
        android:id="@+id/iv_register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/edtTxt_register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_account"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtTxt_register_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/register_telephone"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtTxt_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtTxt_register_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtTxt_register_pwdConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/register_passwordConfirm"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="register"
        android:text="@string/register_signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />



</LinearLayout>